# mmemu

./: .gitignore  .mcp.json  45gs02.md  CHANGELOG.md  CLAUDE.md  ENHANCEMENTS_SESSION_2.md  HARDWARE_VALIDATION.md  KNOWN_ISSUES.md  LUA_SCRIPTING.md  LUA_SESSION_PROGRESS.md  Makefile  PHASE422_IMPLEMENTATION.md  PHASE42_43_SUMMARY.md  PHASE42_DESIGN.md  PHASE4_SUMMARY.md  PHASE5_BACKEND_ABSTRACTION.md  PHASE5_DEMO.md  README.md  SESSION_SUMMARY_2026_07_15.md  UNIFIED_TEST_RUNNER.md  VICE_PROTOCOL.md  VICE_SNAPSHOTS.md  XEMU_VALIDATION.md  adjust.md  mmsim.dump  run-tests.sh  todo.md  xmega65.dump
.plan/: arch.md  c128.md  mcp.md  plus4.md  todo.md
SKILLS/: MACHINE_MANAGEMENT.md
doc/: CC45_DEBUG_METADATA_INTEGRATION.md  CC45_GITHUB_ISSUE_TEMPLATE.md  CC45_INTEGRATION_SUMMARY.md  DEBUG_METADATA.md  ISSUE_100_IDE_INTEGRATION.md  ISSUE_70_RAWMEGA65_IO.md  ISSUE_92_SYMBOL_IMPORT.md  ISSUE_99_EXECUTION_HISTORY.md  PHASE4_IDE_BRIDGES_SUMMARY.md  README-45GS02.md  README-MEGA65-MATH.md  README-MEGA65.md  README-RAW-MEGA65.md  README-SID.md  SERIAL_MONITOR_PROTOCOL.md  SID6581_FILTER_IMPLEMENTATION_SUMMARY.md  SID6581_FILTER_MATH_REFERENCE.md  SID6581_FILTER_NONLINEARITY_IMPLEMENTATION.md  SID6581_NONLINEAR_FILTER_DESIGN.md  SID_FILTER_SATURATION_DESIGN.md  SID_SATURATION_IMPLEMENTATION.cpp  SID_SATURATION_QUICK_REFERENCE.md  TOOL_INTEGRATION_GUIDE.md
machines/: mega65.json  rawMega65.json
sdk/: README.md
sdk/cpp/: CMakeLists.txt
sdk/cpp/examples/: memory_inspector.cpp
sdk/cpp/include/: mmemu_serial_monitor.h
sdk/cpp/src/: mmemu_serial_monitor.cpp
(+356 files in other folders)
